--- a/SpringBeanScopesAndLifeCycle_1/pom.xml
+++ b/SpringBeanScopesAndLifeCycle_1/pom.xml
@@ -12,6 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <java.version>21</java.version>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -21,5 +24,14 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+     <dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-context</artifactId>
+	    <version>6.2.5</version>
+   </dependency>
+    
+    
+    
   </dependencies>
 </project>
