--- a/SpringBoot_JDBC_CRUD/pom.xml
+++ b/SpringBoot_JDBC_CRUD/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ashi.org</groupId>
-	<artifactId>SpringBoot_JDBCApp_1</artifactId>
+	<artifactId>SpringBoot_JDBC_CRUD</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SpringBoot_JDBCApp_1</name>
+	<name>SpringBoot_JDBC_CRUD</name>
 	<description>Spring Boot DATABASE</description>
 	<url/>
 	<licenses>
@@ -36,17 +36,16 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle.database.jdbc</groupId>
-			<artifactId>ojdbc11</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
